--- a/src/com/hydraframework/demos/website/modules/users/Users.mxml
+++ b/src/com/hydraframework/demos/website/modules/users/Users.mxml
@@ -40,11 +40,11 @@
 		<mx:Text text="Users"/>
 		<mx:Button id="wRetrieveUserList" label="Retrieve User List" />
 		<mx:HDividedBox width="100%" height="100%">
-			<mx:VBox>
+			<mx:VBox width="20%" height="100%">
 				<mx:List id="wUserList" width="100%" height="100%" labelField="firstName" />
 				<mx:Button id="wCreate" label="Create" />
 			</mx:VBox>
-			<mx:Form width="100%">
+			<mx:Form width="80%">
 				<mx:FormItem label="First Name">
 					<mx:TextInput id="wFirstName" text="{user.firstName}" width="100%"/>
 				</mx:FormItem>
