--- a/src/com/hydraframework/demos/website/modules/users/Users.mxml
+++ b/src/com/hydraframework/demos/website/modules/users/Users.mxml
@@ -7,7 +7,7 @@
 					  xmlns:waiter="com.hydraframework.demos.website.view.components.waiter.*">
 	<mx:Script>
 		<![CDATA[
-			import com.hydraframework.demos.website.data.interfaces.IUser;
+			import com.hydraframework.demos.website.modules.users.data.interfaces.IUser;
 			import com.hydraframework.demos.website.modules.users.UsersFacade;
 			import com.hydraframework.core.HydraFramework;
 			import flash.utils.setTimeout;
