--- a/src/Website.mxml
+++ b/src/Website.mxml
@@ -71,6 +71,9 @@
 	
 	<mx:VBox width="100%" height="100%" paddingTop="20" paddingLeft="20" paddingBottom="20" paddingRight="20">
 		<primary:PrimaryNavigation />
+		<mx:HBox>
+			<mx:CheckBox id="wToggleGlobalDelegates" selected="true" change="this.dispatchEvent(new Event('toggleDelegates'))" label="Toggle Impl / Mock Delegates" />
+		</mx:HBox>
 		<breadcrumb:Breadcrumb id="wBreadcrumb" />
 		<view:ContentContainer id="wContentContainer" width="100%" height="100%" />
 	</mx:VBox>
