--- a/src/com/hydraframework/demos/website/view/components/navigation/primary/PrimaryNavigation.mxml
+++ b/src/com/hydraframework/demos/website/view/components/navigation/primary/PrimaryNavigation.mxml
@@ -14,7 +14,7 @@
 		<mx:Text text="HydraFramework"
 				 fontSize="14"
 				 fontWeight="bold"/>
-		<mx:Text text="Website Template Project"/>
+		<mx:Text text="Website Demo Project"/>
 	</mx:VBox>
 	<mx:Spacer width="100%"
 			   height="1"/>
