--- a/src/Website.mxml
+++ b/src/Website.mxml
@@ -71,7 +71,7 @@
 	
 	<mx:VBox width="100%" height="100%" paddingTop="20" paddingLeft="20" paddingBottom="20" paddingRight="20">
 		<primary:PrimaryNavigation />
-		<mx:HBox>
+		<mx:HBox verticalAlign="middle">
 			<mx:CheckBox id="wToggleGlobalDelegates" selected="true" change="this.dispatchEvent(new Event('toggleDelegates'))" label="Toggle Impl / Mock Delegates" />
 		</mx:HBox>
 		<breadcrumb:Breadcrumb id="wBreadcrumb" />
